@@ -1,3 +1,3 @@
 # Target: FreeBSD/Alpha
-TDEPFILES= alpha-tdep.o
+TDEPFILES= alpha-tdep.o alphafbsd-tdep.o
 TM_FILE= tm-fbsd.h
